5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1578_994.log
== TEST (2019-03-17 21:35:50) 
-- CODE:
a = "universidade"
b = "federal"
c = "do"
d = "amazonas"
print a, b, c, d



-- ERROR:
File "XXXX", line 5
    print a, b, c, d
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a, b, c, d)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 21:48:43) 
-- CODE:
a = "universidade"
b = "federal"
c = "do"
d = "amazonas"
print a, b, c, d



-- ERROR:
File "XXXX", line 5
    print a, b, c, d
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a, b, c, d)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 21:55:39) 
-- CODE:
#primeiro programa: 
a = "universidade"
b = "federal"
c = "do"
d = "amazonas"
print a




-- ERROR:
File "XXXX", line 6
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 21:57:39) 
-- CODE:
#primeiro programa:ufam.py
a="universidade"
b="federal"
c="do"
d="amazonas"
print a,b,c,d
-- ERROR:
File "XXXX", line 6
    print a,b,c,d
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a,b,c,d)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 21:58:35) 
-- CODE:
#primeiro programa:ufam.py
a="universidade"
b="federal"
c="do"
d="amazonas"
print(a,b,c,d)
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 21:59:06) 
-- CODE:
#primeiro programa:ufam.py
a="universidade"
b="federal"
c="do"
d="amazonas"
print(a,b,c,d)
-- EXECUTION TIME:
0.163405
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 21:59:15) 
-- CODE:
#primeiro programa:ufam.py
a="universidade"
b="federal"
c="do"
d="amazonas"
print(a,b,c,d)
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 21:59:26) 
-- CODE:
#primeiro programa:ufam.py
a="universidade"
b="federal"
c="do"
d="amazonas"
print(a,b,c,d)
-- EXECUTION TIME:
0.1835
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 21:59:54) 
-- CODE:
#primeiro programa:ufam.py
a="universidade federal do amazonas"
b="federal"
c="do"
d="amazonas"
print(a)
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 22:00:05) 
-- CODE:
#primeiro programa:ufam.py
a="universidade federal do amazonas"
b="federal"
c="do"
d="amazonas"
print(a)
-- EXECUTION TIME:
0.110006
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 22:00:12) 
-- CODE:
#primeiro programa:ufam.py
a="universidade federal do amazonas"
b="federal"
c="do"
d="amazonas"
print(a)
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 22:00:44) 
-- CODE:
#primeiro programa:ufam.py
a="Universidade Federal do Amazonas"
print(a)
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 22:00:54) 
-- CODE:
#primeiro programa:ufam.py
a="Universidade Federal do Amazonas"
print(a)
-- EXECUTION TIME:
0.121618
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
